--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "minecraft-nbt",
+  "name": "mc-nbt",
   "version": "1.0.1",
   "description": "A comprehensive Node.js library for reading, writing, and manipulating Minecraft NBT, DAT, and MCA files with SNBT and JSON conversion support",
-  "main": "minecraft-nbt.js",
+  "main": "mc-nbt.js",
   "scripts": {
     "test": "node examples.js",
     "example": "node examples.js",
@@ -30,7 +30,7 @@
     "node": ">=12.0.0"
   },
   "files": [
-    "minecraft-nbt.js",
+    "mc-nbt.js",
     "nbt-core.js",
     "snbt-converter.js",
     "mca-handler.js",
@@ -40,12 +40,12 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/flaasz/minecraft-nbt.git"
+    "url": "https://github.com/flaasz/mc-nbt.git"
   },
   "bugs": {
-    "url": "https://github.com/flaasz/minecraft-nbt/issues"
+    "url": "https://github.com/flaasz/mc-nbt/issues"
   },
-  "homepage": "https://github.com/flaasz/minecraft-nbt#readme",
+  "homepage": "https://github.com/flaasz/mc-nbt#readme",
   "devDependencies": {},
   "dependencies": {}
 }
