--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mc-nbt",
+  "name": "mc-nbt-lib",
   "version": "1.0.1",
   "description": "A comprehensive Node.js library for reading, writing, and manipulating Minecraft NBT, DAT, and MCA files with SNBT and JSON conversion support",
   "main": "mc-nbt.js",
